fixed mobile nav gap

--- a/src/main/resources/static/styles/nav-styles.css
+++ b/src/main/resources/static/styles/nav-styles.css
@@ -191,5 +191,11 @@ nav .logo {
   .main-nav__link::before {
     display: none;
   }
+ .link-questions:link,
+ .link-questions:visited{
+   margin: 0.8rem 0;
+ }
+
+
 
 }
